# django-multi-email-field

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES  README.rst  pyproject.toml  quicktest.py  quicktests.py  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  django.yml  publish-to-pypi.yml
multi_email_field/: fields.py  forms.py  tests.py  widgets.py
multi_email_field/locale/cs/LC_MESSAGES/: django.mo
multi_email_field/tests/: models.py  tests.py
