[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-multi-email-field"
version = "0.7.0"
authors = [
    {name = "Florent Lebreton", email = "florent.lebreton@makina-corpus.com"},
]
maintainers = [
    {name = "Sébastien Corbin", email = "seb.corbin@gmail.com"},
]
description = "Provides a model field and a form field to manage list of e-mails"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
        "Topic :: Utilities",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 3.2",
        "Framework :: Django :: 4.2",
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]
dependencies = [
    "django>=3.2,<5",
]

[project.optional-dependencies]
dev = ["pyquery", "coverage", "black", "ruff"]
