[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-multi-email-field"
version = "0.8.0"
authors = [
    {name = "Florent Lebreton", email = "florent@lebreton.email"},
]
maintainers = [
    {name = "Sébastien Corbin", email = "seb.corbin@gmail.com"},
]
description = "Provides a model field and a form field to manage list of e-mails"
readme = "README.rst"
requires-python = ">=3.9"
license-files = ["LICENSE"]
classifiers = [
        "Topic :: Utilities",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 4.2",
        "Framework :: Django :: 5.1",
        "Framework :: Django :: 5.2",
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
dev = ["pyquery", "coverage", "black", "ruff"]


[tool.ruff]
line-length = 88
target-version = "py39"
src = ["multi_email_field"]
